test/Fail/Issue6651-UnivPred-SizeUniv.err
Issue6651-UnivPred-SizeUniv.agda:17.5-9: error: [UnequalTypes]
The types
  Setω
and
  Set₁
are not equal
when checking that the solution SizeUniv of metavariable _0 has the
expected type Set₁
